force-app/main/default/objects/smagicinteract__Shortened_Link_Detail__c/smagicinteract__Shortened_Link_Detail__c.object-meta.xml
<CustomObject>
    <label>Shortened Link Detail</label>
    <nameField>
        <label>Shortened Link Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shortened Link Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>