force-app/main/default/objects/smagicinteract__Shortened_Link_Detail__c/fields/smagicinteract__Browser__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Browser__c</fullName>
    <label>Browser</label>
    <length>100</length>
    <type>Text</type>
</CustomField>