force-app/main/default/objects/smagicinteract__Shortened_Link_Detail__c/fields/smagicinteract__Click_Time__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Click_Time__c</fullName>
    <label>Click Time</label>
    <type>DateTime</type>
</CustomField>