force-app/main/default/objects/smagicinteract__Shortened_Link_Detail__c/fields/smagicinteract__Country__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Country__c</fullName>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>