force-app/main/default/objects/smagicinteract__Shortened_Link_Detail__c/fields/smagicinteract__OS__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__OS__c</fullName>
    <label>OS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>