force-app/main/default/objects/smagicinteract__Shortened_Link_Detail__c/fields/smagicinteract__Shortened_Link__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Shortened_Link__c</fullName>
    <label>Shortened Link</label>
    <referenceTo>smagicinteract__Shortened_Link__c</referenceTo>
    <relationshipLabel>Shortened Link Details</relationshipLabel>
    <relationshipName>Shortened_Link_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>